@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,8 +38,8 @@ import com.sun.tools.javac.util.*;
 import com.sun.tools.javac.util.JCDiagnostic.*;
 
 import java.nio.CharBuffer;
+import java.util.Iterator;
 import java.util.Set;
-import java.util.regex.Pattern;
 
 import static com.sun.tools.javac.parser.Tokens.*;
 import static com.sun.tools.javac.util.LayoutCharacters.EOI;
@@ -62,17 +62,17 @@ public class JavaTokenizer extends UnicodeReader {
     /**
      * Sentinel for non-value.
      */
-    private int NOT_FOUND = -1;
+    private final static int NOT_FOUND = -1;
 
     /**
      * The source language setting. Copied from scanner factory.
      */
-    private Source source;
+    private final Source source;
 
     /**
      * The preview language setting. Copied from scanner factory.
      */
-    private Preview preview;
+    private final Preview preview;
 
     /**
      * The log to be used for error reporting. Copied from scanner factory.
@@ -88,6 +88,26 @@ public class JavaTokenizer extends UnicodeReader {
      * The names factory. Copied from scanner factory.
      */
     private final Names names;
+
+    /**
+     * Origin scanner factory.
+     */
+    protected final ScannerFactory fac;
+
+    /**
+     * Buffer for building literals, used by nextToken().
+     */
+    protected final StringBuilder sb;
+
+    /**
+     * Tokens pending to be read from string template embedded expressions.
+     */
+    protected List<Token> pendingTokens;
+
+    /**
+     * String template fragment ranges; end-endPos pairs.
+     */
+    protected List<Integer> fragmentRanges;
 
     /**
      * The token kind, set by nextToken().
@@ -120,21 +140,21 @@ public class JavaTokenizer extends UnicodeReader {
     protected boolean hasEscapeSequences;
 
     /**
-     * Buffer for building literals, used by nextToken().
+     * true if contains templated string escape sequences, set by nextToken().
      */
-    protected StringBuilder sb;
+    protected boolean isStringTemplate;
 
     /**
-     * Origin scanner factory.
+     * true if errors are pending from embedded expressions.
      */
-    protected ScannerFactory fac;
+    protected boolean hasStringTemplateErrors;
 
     /**
      * The set of lint options currently in effect. It is initialized
      * from the context, and then is set/reset as needed by Attr as it
      * visits all the various parts of the trees during attribution.
      */
-    protected Lint lint;
+    protected final Lint lint;
 
     /**
      * Construct a Java token scanner from the input character buffer.
@@ -149,9 +169,9 @@ public class JavaTokenizer extends UnicodeReader {
     /**
      * Construct a Java token scanner from the input character array.
      *
-     * @param fac     the factory which created this Scanner
-     * @param array   the input character array.
-     * @param length  The length of the meaningful content in the array.
+     * @param fac      factory which created this Scanner
+     * @param array    input character array
+     * @param length   length of the meaningful content in the array
      */
     protected JavaTokenizer(ScannerFactory fac, char[] array, int length) {
         super(fac, array, length);
@@ -163,6 +183,8 @@ public class JavaTokenizer extends UnicodeReader {
         this.preview = fac.preview;
         this.lint = fac.lint;
         this.sb = new StringBuilder(256);
+        this.pendingTokens = List.nil();
+        this.fragmentRanges = List.nil();
     }
 
     /**
@@ -308,15 +330,6 @@ public class JavaTokenizer extends UnicodeReader {
     }
 
     /**
-     * Test if the current character is a line terminator.
-     *
-     * @return true if current character is a line terminator.
-     */
-    private boolean isEOLN() {
-        return isOneOf('\n', '\r');
-    }
-
-    /**
      * Skip and process a line terminator sequence.
      */
     private void skipLineTerminator() {
@@ -327,19 +340,106 @@ public class JavaTokenizer extends UnicodeReader {
     }
 
     /**
-     * Processes the current character and places in the literal buffer. If the current
-     * character is a backslash then the next character is validated as a proper
-     * escape character. Conversion of escape sequences takes place at end of nextToken().
+     * Scan the content of a string template expression.
      *
-     * @param pos position of the first character in literal.
+     * @param pos     start of literal
+     * @param endPos  start of embedded expression
+     */
+    private void scanEmbeddedExpression(int pos, int endPos) {
+        // If first embedded expression.
+        if (!isStringTemplate) {
+            checkSourceLevel(pos, Feature.STRING_TEMPLATES);
+            fragmentRanges = fragmentRanges.append(pos);
+            isStringTemplate = true;
+        }
+        // Track end of previous fragment.
+        fragmentRanges = fragmentRanges.append(endPos);
+        // Keep backslash and add rest of placeholder.
+        sb.append("{}");
+
+        // Separate tokenizer for the embedded expression.
+        JavaTokenizer tokenizer = new JavaTokenizer(fac, buffer(), length());
+        tokenizer.reset(position());
+
+        // Track brace depth.
+        int braceCount = 0;
+
+        // Accumulate tokens.
+        List<Token> tokens = List.nil();
+
+        // Stash first left brace.
+        Token token = tokenizer.readToken();
+        tokens = tokens.append(token);
+
+        while (isAvailable()) {
+            // Read and stash next token.
+            token = tokenizer.readToken();
+            tokens = tokens.append(token);
+
+            // Intercept errors
+            if (token.kind == TokenKind.ERROR) {
+                // Track start of next fragment.
+                if (isTextBlock) {
+                    reset(length());
+                } else {
+                    skipToEOLN();
+                }
+                hasStringTemplateErrors = true;
+                return;
+            }
+
+            if (token.kind == TokenKind.RBRACE) {
+                // Potential closing brace.
+                if (braceCount == 0) {
+                    break;
+                }
+
+                braceCount--;
+            } else if (token.kind == TokenKind.LBRACE) {
+                // Nesting deeper.
+                braceCount++;
+            } else if (token.kind == TokenKind.STRINGFRAGMENT) {
+                tokens = tokens.appendList(tokenizer.pendingTokens);
+                tokenizer.pendingTokens = List.nil();
+            } else if (token.kind == TokenKind.EOF) {
+                break;
+            }
+        }
+
+        // If no closing brace will be picked up as an unterminated string.
+
+        // Set main tokenizer to continue at next position.
+        int position = tokenizer.position();
+        reset(position);
+
+        // Track start of next fragment.
+        fragmentRanges = fragmentRanges.append(position);
+
+        // Pend the expression tokens after the STRINGFRAGMENT.
+        pendingTokens = pendingTokens.appendList(tokens);
+    }
+
+    /**
+     * Processes the current character and places in the literal buffer. If the current
+     * character is a backslash then the next character is assumed to be a proper
+     * escape character. Actual conversion of escape sequences takes place
+     * during at the end of readToken.
+     *
+     * @param pos          position of the first character in literal.
      */
     private void scanLitChar(int pos) {
+        int backslash = position();
         if (acceptThenPut('\\')) {
             hasEscapeSequences = true;
-
             switch (get()) {
-                case '0': case '1': case '2': case '3':
-                case '4': case '5': case '6': case '7':
+                case '0':
+                case '1':
+                case '2':
+                case '3':
+                case '4':
+                case '5':
+                case '6':
+                case '7':
                     char leadch = get();
                     putThenNext();
 
@@ -379,6 +479,13 @@ public class JavaTokenizer extends UnicodeReader {
                     }
                     break;
 
+                case '{':
+                    scanEmbeddedExpression(pos, backslash);
+                    if (hasStringTemplateErrors) {
+                        return;
+                    }
+                    break;
+
                 default:
                     lexError(position(), Errors.IllegalEscChar);
                     break;
@@ -394,10 +501,10 @@ public class JavaTokenizer extends UnicodeReader {
      * @param pos  position of the first character in literal.
      */
     private void scanString(int pos) {
-        // Assume the best.
-        tk = Tokens.TokenKind.STRINGLITERAL;
         // Track the end of first line for error recovery.
         int firstEOLN = NOT_FOUND;
+        tk = TokenKind.STRINGLITERAL;
+
         // Check for text block delimiter.
         isTextBlock = accept("\"\"\"");
 
@@ -418,7 +525,13 @@ public class JavaTokenizer extends UnicodeReader {
 
             // While characters are available.
             while (isAvailable()) {
-                if (accept("\"\"\"")) {
+                if (hasStringTemplateErrors) {
+                    break;
+                } else if (accept("\"\"\"")) {
+                    if (isStringTemplate && tk == TokenKind.STRINGLITERAL) {
+                        tk = TokenKind.STRINGFRAGMENT;
+                    }
+
                     return;
                 }
 
@@ -442,7 +555,12 @@ public class JavaTokenizer extends UnicodeReader {
 
             // While characters are available.
             while (isAvailable()) {
-                if (accept('\"')) {
+                if (hasStringTemplateErrors) {
+                    break;
+                } else if (accept('\"')) {
+                    if (isStringTemplate && tk == TokenKind.STRINGLITERAL) {
+                        tk = TokenKind.STRINGFRAGMENT;
+                    }
                     return;
                 }
 
@@ -457,10 +575,18 @@ public class JavaTokenizer extends UnicodeReader {
             }
         }
 
-        // String ended without close delimiter sequence.
-        lexError(pos, isTextBlock ? Errors.UnclosedTextBlock : Errors.UnclosedStrLit);
+        // String ended without close delimiter sequence or has embedded expression errors.
+        if (isStringTemplate) {
+            lexError(pos, isTextBlock ? Errors.TextBlockTemplateIsNotWellFormed
+                                      : Errors.StringTemplateIsNotWellFormed);
+            fragmentRanges = List.nil();
+            pendingTokens = List.nil();
+        } else {
+            lexError(pos, isTextBlock ? Errors.UnclosedTextBlock
+                                      : Errors.UnclosedStrLit);
+        }
 
-        if (firstEOLN  != NOT_FOUND) {
+        if (!hasStringTemplateErrors && firstEOLN  != NOT_FOUND) {
             // Reset recovery position to point after text block open delimiter sequence.
             reset(firstEOLN);
         }
@@ -781,11 +907,20 @@ public class JavaTokenizer extends UnicodeReader {
      * Read token (main entrypoint.)
      */
     public Token readToken() {
+        if (pendingTokens.nonEmpty()) {
+            Token token = pendingTokens.head;
+            pendingTokens = pendingTokens.tail;
+            return token;
+        }
+
         sb.setLength(0);
         name = null;
         radix = 0;
         isTextBlock = false;
         hasEscapeSequences = false;
+        isStringTemplate = false;
+        hasStringTemplateErrors = false;
+        fragmentRanges = List.nil();
 
         int pos;
         List<Comment> comments = null;
@@ -980,6 +1115,7 @@ public class JavaTokenizer extends UnicodeReader {
                             lexError(pos, Errors.IllegalLineEndInCharLit);
                         }
 
+                        int errorPos = position();
                         scanLitChar(pos);
 
                         if (accept('\'')) {
@@ -989,7 +1125,6 @@ public class JavaTokenizer extends UnicodeReader {
                         }
                     }
                     break loop;
-
                 case '\"': // (Spec. 3.10)
                     scanString(pos);
                     break loop;
@@ -1026,8 +1161,8 @@ public class JavaTokenizer extends UnicodeReader {
                                 arg = String.format("\\u%04x\\u%04x", (int) hi, (int) lo);
                             } else {
                                 char ch = get();
-                                arg = (32 < ch && ch < 127) ? String.format("%s", ch) :
-                                                              String.format("\\u%04x", (int) ch);
+                                arg = (32 < ch && ch < 127) ? String.valueOf(ch) :
+                                                              "\\u%04x".formatted((int) ch);
                             }
 
                             lexError(pos, Errors.IllegalChar(arg));
@@ -1039,6 +1174,11 @@ public class JavaTokenizer extends UnicodeReader {
             }
 
             int endPos = position();
+
+            // Track end of final fragment.
+            if (isStringTemplate) {
+                fragmentRanges = fragmentRanges.append(endPos);
+            }
 
             if (tk.tag == Token.Tag.DEFAULT) {
                 return new Token(tk, pos, endPos, comments);
@@ -1071,6 +1211,11 @@ public class JavaTokenizer extends UnicodeReader {
                     }
                 }
 
+                if (isStringTemplate) {
+                    // Break string into fragments and then return the first of the framents.
+                    return getFragments(string, comments);
+                }
+
                 // Translate escape sequences if present.
                 if (hasEscapeSequences) {
                     try {
@@ -1094,10 +1239,70 @@ public class JavaTokenizer extends UnicodeReader {
             if (scannerDebug) {
                     System.out.println("nextToken(" + pos
                                        + "," + endPos + ")=|" +
-                                       new String(getRawCharacters(pos, endPos))
+                                       getRawString(pos, endPos)
                                        + "|");
             }
         }
+    }
+
+    /**
+     * Convert the string into a list of pending tokens to precede embedded
+     * expressions.
+     *
+     * @param string    string to fragment
+     * @param comments  comments for first token
+     *
+     * @return first pending token.
+     */
+    private Token getFragments(String string, List<Comment> comments) {
+        List<Token> tokens = List.nil();
+        Iterator<Integer> rangeIter = fragmentRanges.iterator();
+        for (String fragment : fragment(string)) {
+            fragment = fragment.translateEscapes();
+            int fragmentPos = rangeIter.next();
+            int fragmentEndPos = rangeIter.next();
+            Token token = new StringToken(TokenKind.STRINGFRAGMENT,
+                    fragmentPos, fragmentEndPos, fragment, comments);
+            comments = null;
+            tokens = tokens.append(token);
+        }
+        pendingTokens = tokens.appendList(pendingTokens);
+        Token first = pendingTokens.head;
+        pendingTokens = pendingTokens.tail;
+        return first;
+    }
+
+    /**
+     * Break string template up into fragments. "\{}" indicates where
+     * embedded expressions occur.
+     *
+     * @param string string template
+     *
+     * @return list of fragment strings
+     */
+    List<String> fragment(String string) {
+        List<String> fragments = List.nil();
+        StringBuilder sb = new StringBuilder();
+        int length = string.length();
+        for (int i = 0; i < length; i++) {
+            char ch = string.charAt(i);
+            if (ch != '\\') {
+                sb.append(ch);
+            } else if (i + 2 < length && string.charAt(i + 1) == '{'
+                    && string.charAt(i + 2) == '}') {
+                fragments = fragments.append(sb.toString());
+                sb.setLength(0);
+                i += 2;
+            } else if (i + 1 < length){
+                sb.append('\\');
+                sb.append(string.charAt(i + 1));
+                i++;
+            } else {
+                // Error already reported.
+            }
+        }
+        fragments = fragments.append(sb.toString());
+        return fragments;
     }
 
     /**
@@ -1146,13 +1351,11 @@ public class JavaTokenizer extends UnicodeReader {
         if (scannerDebug) {
             System.out.println("processComment(" + pos
                                 + "," + endPos + "," + style + ")=|"
-                                + new String(getRawCharacters(pos, endPos))
+                                + getRawString(pos, endPos)
                                 + "|");
         }
 
-        char[] buf = getRawCharacters(pos, endPos);
-
-        return new BasicComment(style, fac, buf, pos);
+        return new BasicComment(style,this, pos, endPos);
     }
 
     /**
@@ -1167,8 +1370,8 @@ public class JavaTokenizer extends UnicodeReader {
     protected void processWhiteSpace(int pos, int endPos) {
         if (scannerDebug) {
             System.out.println("processWhitespace(" + pos
-                                + "," + endPos + ")=|" +
-                                new String(getRawCharacters(pos, endPos))
+                                + "," + endPos + ")=|"
+                                + getRawString(pos, endPos)
                                 + "|");
         }
     }
@@ -1182,8 +1385,8 @@ public class JavaTokenizer extends UnicodeReader {
     protected void processLineTerminator(int pos, int endPos) {
         if (scannerDebug) {
             System.out.println("processTerminator(" + pos
-                                + "," + endPos + ")=|" +
-                                new String(getRawCharacters(pos, endPos))
+                                + "," + endPos + ")=|"
+                                + getRawString(pos, endPos)
                                 + "|");
         }
     }
@@ -1206,9 +1409,6 @@ public class JavaTokenizer extends UnicodeReader {
     protected static class BasicComment extends PositionTrackingReader implements Comment {
         /**
          * Style of comment
-         *   LINE starting with //
-         *   BLOCK starting with /*
-         *   JAVADOC starting with /**
          */
         CommentStyle cs;
 
@@ -1225,13 +1425,13 @@ public class JavaTokenizer extends UnicodeReader {
         /**
          * Constructor.
          *
-         * @param cs      comment style
-         * @param sf      Scan factory.
-         * @param array   Array containing contents of source.
-         * @param offset  Position offset in original source buffer.
+         * @param cs     comment style
+         * @param reader existing reader
+         * @param pos    start of meaningful content in buffer.
+         * @param endPos end of meaningful content in buffer.
          */
-        protected BasicComment(CommentStyle cs, ScannerFactory sf, char[] array, int offset) {
-            super(sf, array, offset);
+        protected BasicComment(CommentStyle cs, UnicodeReader reader, int pos, int endPos) {
+            super(reader, pos, endPos);
             this.cs = cs;
         }
 
@@ -1247,8 +1447,7 @@ public class JavaTokenizer extends UnicodeReader {
         /**
          * Return buffer position in original buffer mapped from buffer position in comment.
          *
-         * @param pos  buffer position in comment.
-         *
+         * @param pos buffer position in comment.
          * @return buffer position in original buffer.
          */
         public int getSourcePos(int pos) {
@@ -1257,11 +1456,8 @@ public class JavaTokenizer extends UnicodeReader {
 
         /**
          * Return style of comment.
-         *   LINE starting with //
-         *   BLOCK starting with /*
-         *   JAVADOC starting with /**
          *
-         * @return
+         * @return style of comment.
          */
         public CommentStyle getStyle() {
             return cs;
@@ -1273,76 +1469,110 @@ public class JavaTokenizer extends UnicodeReader {
          * @return true if comment contains @deprecated.
          */
         public boolean isDeprecated() {
-            if (!scanned && cs == CommentStyle.JAVADOC) {
+            if (!scanned) {
                 scanDocComment();
             }
-
             return deprecatedFlag;
         }
 
         /**
-         * Scan JAVADOC comment for details.
+         * Remove closing star(s) slash from comment.
+         *
+         * @param line line reader
+         *
+         * @return new line reader if detected otherwise original line reader.
+         */
+        UnicodeReader trimEndOfComment(UnicodeReader line) {
+            int pos = line.position();
+            boolean allWhitespace = true;
+
+            while (line.isAvailable()) {
+                int endPos = line.position();
+
+                if (line.skip('*') != 0 && line.is('/')) {
+                    return line.lineReader(allWhitespace ? endPos : pos, endPos);
+                } else {
+                    allWhitespace = allWhitespace && line.isWhitespace();
+                    line.next();
+                }
+            }
+
+            line.reset(pos);
+
+            return line;
+        }
+
+        /**
+         * Trim the first part of the JavaDoc comment.
+         *
+         * @param line line reader
+         *
+         * @return modified line reader
+         */
+        UnicodeReader trimJavadocComment(UnicodeReader line) {
+            line = trimEndOfComment(line);
+            int pos = line.position();
+            line.skipWhitespace();
+
+            if (!line.isAvailable()) {
+                return line;
+            }
+
+            if (line.skip('*') == 0) {
+                line.reset(pos);
+            }
+
+            return line;
+        }
+
+        /**
+         * Put the line into the buffer.
+         *
+         * @param line line reader
+         */
+        protected void putLine(UnicodeReader line) {
+            // ignore, overridden in subclass
+        }
+
+        /**
+         * Scan document comment for content.
          */
         protected void scanDocComment() {
-            try {
-                boolean deprecatedPrefix = false;
-                accept("/**");
-
-                forEachLine:
-                while (isAvailable()) {
-                    // Skip optional WhiteSpace at beginning of line
-                    skipWhitespace();
-
-                    // Skip optional consecutive Stars
-                    while (accept('*')) {
-                        if (is('/')) {
-                            return;
-                        }
-                    }
-
-                    // Skip optional WhiteSpace after Stars
-                    skipWhitespace();
-
-                    // At beginning of line in the JavaDoc sense.
-                    deprecatedPrefix = deprecatedFlag || accept("@deprecated");
-
-                    if (deprecatedPrefix && isAvailable()) {
-                        if (Character.isWhitespace(get())) {
-                            deprecatedFlag = true;
-                        } else if (accept('*')) {
-                            if (is('/')) {
-                                deprecatedFlag = true;
-                                return;
-                            }
-                        }
-                    }
-
-                    // Skip rest of line
-                    while (isAvailable()) {
-                        switch (get()) {
-                            case '*':
-                                next();
-
-                                if (is('/')) {
-                                    return;
-                                }
-
-                                break;
-                            case '\r': // (Spec 3.4)
-                            case '\n': // (Spec 3.4)
-                                accept('\r');
-                                accept('\n');
-                                continue forEachLine;
-
-                            default:
-                                next();
-                                break;
-                        }
-                    } // rest of line
-                } // forEachLine
-                return;
-            } finally {
+            if (!scanned) {
+                deprecatedFlag = false;
                 scanned = true;
+
+                if (!accept("/**")) {
+                    return;
+                }
+
+                skip('*');
+                skipWhitespace();
+
+                if (isEOLN()) {
+                    accept('\r');
+                    accept('\n');
+                }
+
+                while (isAvailable()) {
+                    UnicodeReader line = lineReader();
+                    line = trimJavadocComment(line);
+
+                    // If standalone @deprecated tag
+                    int pos = line.position();
+                    line.skipWhitespace();
+
+                    if (line.accept("@deprecated") &&
+                            (!line.isAvailable() ||
+                                    line.isWhitespace() ||
+                                    line.isEOLN() ||
+                                    line.get() == EOI)) {
+                        deprecatedFlag = true;
+                    }
+
+                    line.reset(pos);
+                    putLine(line);
+                }
             }
         }
     }
