@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,12 +34,12 @@
  * @requires vm.continuations
  * @library /test/lib
  * @run build TestClass1 TestClass2 TestClass3
- * @compile --enable-preview -source ${jdk.version} ParallelTransformerLoaderTest.java
+ * @compile ParallelTransformerLoaderTest.java
  * @run driver jdk.test.lib.util.JavaAgentBuilder ParallelTransformerLoaderAgent ParallelTransformerLoaderAgent.jar
  * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar Test.jar TestClass1 TestClass2 TestClass3
  * @run clean ParallelTransformerLoaderAgent TestClass1 TestClass2 TestClass3
- * @run main/othervm --enable-preview -javaagent:ParallelTransformerLoaderAgent.jar=Test.jar ParallelTransformerLoaderTest platform
- * @run main/othervm --enable-preview -javaagent:ParallelTransformerLoaderAgent.jar=Test.jar ParallelTransformerLoaderTest virtual
+ * @run main/othervm -javaagent:ParallelTransformerLoaderAgent.jar=Test.jar ParallelTransformerLoaderTest platform
+ * @run main/othervm -javaagent:ParallelTransformerLoaderAgent.jar=Test.jar ParallelTransformerLoaderTest virtual
  */
 public class ParallelTransformerLoaderTest {
     private static final int kNumIterations = 1000;
